# ai-projects

./: .gitignore  README.md  pyproject.toml
daily_papers/: ai.py  config.py  email_send.py  main.py  papers.py  pdf_read.py
http_download/: http_client.py  http_server.py  readme
http_download/pdf_trans/: index.html  pdf_trans.py  prompt.txt
pytorch_baseline/: train.py
transformer/: encoder.py  main.py  transformer.py
