[project]
name = "ai-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cozepy>=0.19.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "google>=3.0.0",
    "google-genai>=1.2.0",
    "google-generativeai>=0.8.5",
    "requests>=2.32.5",
    "vertexai>=1.71.1",
    "volcengine-python-sdk[ark]>=4.0.26",
]
